bg added + email

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,13 @@
     --shadow-my-sm: 0 0 10px rgba(0, 0, 0, 0.3);
     --color-my-theme: #fff9de12; /* this is transparent color code*/
     --color-my-theme-border: #fff9de31;
+    --color-my-theme-icon: #fad6ff8b;
 
-    --color-my-theme-solid: #32382d;
+    /* --color-my-theme-solid: #32382d; */
+    --color-my-theme-solid: #4c2d51;
 
 
     --breakpoint-my-sm: 640px;
     --breakpoint-my-md: 850px;
     --breakpoint-my-lg: 1000px;
 }
-
