--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
 body{
-    background: #000901;
+
+    /* background: #000901; */
+    background: rgba(0, 0, 0, 0.5);
+    /* background: url(/assets/imgs/general/6436961_3312580.jpg) no-repeat center center fixed ; */
+    position: relative;
+}
+body::after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(/assets/imgs/general/bg-03.png) no-repeat center center fixed;
+    /* background: url(/assets/imgs/general/bg-01.jpg) no-repeat center center fixed; */
+    /* background: url(/assets/imgs/general/bg-02.jpg) no-repeat center center fixed; */
+    background-size: cover;
+    opacity: 1; /* Adjust opacity here */
+    z-index: -1;
+    
+    background: #fad6ff8b;
 }
