--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body::after{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(/assets/imgs/general/bg-03.png) no-repeat center center fixed;
+    background: url(/assets/imgs/general/bg-03.jpg) no-repeat center center fixed;
     /* background: url(/assets/imgs/general/bg-01.jpg) no-repeat center center fixed; */
     /* background: url(/assets/imgs/general/bg-02.jpg) no-repeat center center fixed; */
     background-size: cover;
